[tool.poetry]
name = "lexeme-combinator"
version = "0.1.0"
description = "Tool to add combines to lexemes in Wikidata"
authors = ["Your Name <you@example.com>"]
license = "GPLv3+"
readme = "README.md"
packages = [{include = "lexeme_combinator"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
wikibaseintegrator = "^0.12.3"
rich = "^13.2.0"
pydantic = "^1.10.4"
questionary = "^1.10.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.8.0"
codespell = "^2.2.1"
coverage = "^6.5.0"
flake8 = "^5.0.4"
flake8-2020 = "^1.7.0"
flake8-bugbear = "^22.9.23"
flake8-comprehensions = "^3.10.0"
flake8-return = "^1.1.3"
isort = "^5.10.1"
mypy = "^0.981"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pyupgrade = "^2.38.2"
safety = "^2.2.0"
types-requests = "^2.28.11.2"
types-python-dateutil = "^2.8.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
